Change connect-develop icon to basic flag.

--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -1,7 +1,7 @@
 <template name="home">
   <div class="template-home">
     <div class="page-header">
-      <h1><i class="fa fa-connectdevelop"></i> MyApp</h1>
+      <h1><i class="fa fa-flag"></i> MyApp</h1>
     </div>
     <p>
       Welcome to my awesome Meteor app!.
